--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 layout: default
 ---
 
-# Pavisam liels virsraksts
-##  Zemāk
-###  Zemāk 3
+<h1>Ievads</h1>
+    Te tāds ievads par neko
+<h1>Python</h1>
+    <h2>Uzdevumi</h2>
+        Stāsts par python
+    <h2>Kā darbojas?</h2>
+        Stāsts par darbojas
 
 
  
